multi_index_map_derive2/tests/ui/accessor_missing.stderr
error: MultiIndexAccessor requires exactly one #[multi_index(...)] category
 --> tests/ui/accessor_missing.rs:4:8
  |
4 | struct Missing;
  |        ^^^^^^^
