multi_index_map_derive2/tests/ui/accessor_missing.rs
use multi_index_map_derive2::MultiIndexAccessor;

#[derive(MultiIndexAccessor)]
struct Missing;

fn main() {}
